--- a/static/index.html
+++ b/static/index.html
@@ -44,7 +44,7 @@
                 return;
             }
 
-            const response = await fetch('/process', {
+            const response = await fetch('/solver', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ center_letter, other_letters })
