added social image and favicon

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,18 @@
     <title>Spelling Bee Solver</title>
     <link rel="stylesheet" href="static/styles.css">
 
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://solver.jacksonmdavis.com">
+    <meta property="og:title" content="Spelling Bee Solver - Jackson Davis Portfolio">
+    <meta property="og:description" content="A solver for the NYT game 'Spelling Bee'">
+    <meta property="og:type" content="Portfolio">
+    <meta name="image" property="og:image" content="https://jacksonmdavis.com/images/spelling-bee-solver.jpg">
+    <meta property="og:image:alt" content="Spelling Bee Solver social image">
+    <meta property="og:locale" content="en_US">
+    <meta name="author" content="Jackson Davis">
+
+    <link rel="icon" href="JD-Favicon.jpg" type="image/x-icon">
+
 </head>
 <body>
     <h1>Spelling Bee Solver</h1>
