--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
     <meta property="og:locale" content="en_US">
     <meta name="author" content="Jackson Davis">
 
-    <link rel="icon" href="JD-Favicon.jpg" type="image/x-icon">
+    <link rel="icon" href="static/JD-Favicon.jpg" type="image/x-icon">
 
 </head>
 <body>
